[package]
name          = "atm90e32-async"
version       = "0.2.2"
edition       = "2021"
rust-version  = "1.75"
authors       = ["Viacheslav Bocharov <v@baodeep.com>", "JetHome (r)"]
license       = "GPL-2.0-or-later OR Apache-2.0"
description   = "Async no_std driver for the ATM90E32 3-phase SPI power metering IC"
repository    = "https://github.com/jethub-iot/atm90e32-async-rs"
homepage      = "https://github.com/jethub-iot/atm90e32-async-rs"
documentation = "https://docs.rs/atm90e32-async"
readme        = "README.md"
keywords      = ["embedded", "no-std", "driver", "power", "atm90e32"]
categories    = ["embedded", "no-std", "hardware-support"]

[dependencies]
embedded-hal-async = "1.0"
defmt              = { version = "0.3", optional = true }

[features]
default = []
defmt   = ["dep:defmt"]
